--- a/homepage.html
+++ b/homepage.html
@@ -112,7 +112,7 @@
             <!-- Github -->
             <a
               class="btn btn-outline-light btn-floating m-1"
-              href="#!"
+              href="https://github.com/asphalke07/Productivity-Helper"
               role="button"
               ><i class="fab fa-github"></i
             ></a>
