Calender Updated and About US added

--- a/homepage.html
+++ b/homepage.html
@@ -3,7 +3,7 @@
     <title>Productivity helper</title>
     <meta charset="UTF-8" />
     <meta name="description" content="" />
-    <meta name="author" content="Code 4 team" />
+    <meta name="author" content="WT Project Team" />
 
     <!-- js files -->
     <link
@@ -72,6 +72,7 @@
               <a class="nav-link" href="\calender">Calender</a>
               <a class="nav-link" href="\pomodoro">Pomodoro</a>
               <a class="nav-link" href="\notes">Notes</a>
+              <a class="nav-link" href="\about">About</a>
             </div>
           </div>
         </div>
@@ -126,7 +127,7 @@
           class="text-center "
           style="background-color: rgba(0, 0, 0, 0.2)"
         >
-          ©2022 Copyright:
+          Copyright@2022:
          
       </footer>
     </div>
